# SDL2TemplateVSCode

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
src/: CMakeLists.txt  main.cpp
